docs(design): 同步配色系统结论与 Pen 操作建议
design-decisions 补齐配色系统的四层分工、12 步用途、令牌对应与采用方案，
恢复被误删的兼容版降级小节。pen.md 补 6 条实操建议，含多进程残留导致
读到旧文件的坑。README 修正编号并补 Pen 画布与参考图的入口。